Added digit recognizer app

--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 15px;
+}
+</style>
+</head>
+<body>
+
+<h2>Demos</h2>
+<p>Apps made with AIQOM</p>
+
+<table style="width:100%">
+  <tr>
+    <th>App</th>
+    <th>Live Demo</th> 
+    <th>Recorded video</th>
+  </tr>
+  <tr>
+    <td>MNIST</td>
+    <td>link1</td>
+    <td>link2</td>
+  </tr>
+
+</table>
