--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@ th, td {
   </tr>
   <tr>
     <td>MNIST</td>
-    <td>link1</td>
-    <td>link2</td>
+    <td><a href="/app1.html">link</a>
+    </td>
+    <td><a href="/MNISTVideoDemo.mp4">link</a>
+    </td>
   </tr>
 
 </table>
