--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ th, td {
     <td>MNIST</td>
     <td><a href="/app1.html">link</a>
     </td>
-    <td><a href="/MNISTVideoDemo.mp4">link</a>
+    <td> <img src="digitRecognizer.gif" alt="Digit Recognizer"> 
     </td>
   </tr>
 
