added soure code

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ th, td {
     <th>App</th>
     <th>Live Demo</th> 
     <th>Recorded video</th>
+    <th>code</th>
   </tr>
   <tr>
     <td>MNIST</td>
@@ -28,6 +29,9 @@ th, td {
     </td>
     <td> <img src="digitRecognizer.gif" alt="Digit Recognizer"> 
     </td>
+  </td>
+  <td><a href="https://github.com/StallionDotAi/StallionDotAi.github.io/blob/main/app1.html">code</a>
+  </td>
   </tr>
 
 </table>
