added chemistry lab assistant app

--- a/index.html
+++ b/index.html
@@ -33,5 +33,15 @@ th, td {
   <td><a href="https://github.com/StallionDotAi/StallionDotAi.github.io/blob/main/app1.html">code</a>
   </td>
   </tr>
+  <tr>
+    <td>Chemistry Lab Assistant</td>
+    <td><a href="/app2.html">link</a>
+    </td>
+    <td> <img src="chmLabAssistant.gif" alt="Chemistry Lab Assistant"> 
+    </td>
+  </td>
+  <td><a href="https://github.com/StallionDotAi/StallionDotAi.github.io/blob/main/app2.html">code</a>
+  </td>
+  </tr>
 
 </table>
