hand gestures gif

--- a/index.html
+++ b/index.html
@@ -43,5 +43,14 @@ th, td {
   <td><a href="https://github.com/StallionDotAi/StallionDotAi.github.io/blob/main/app2.html">code</a>
   </td>
   </tr>
-
+  <tr>
+    <td>Hand Gestures Recognizer</td>
+    <td><a href="">link</a>
+    </td>
+    <td> <img src="handGestures.gif" alt="Hand Gestures Recognizer"> 
+    </td>
+  </td>
+  <td><a href="">code</a>
+  </td>
+  </tr>
 </table>
