Added plants classification

--- a/index.html
+++ b/index.html
@@ -52,4 +52,13 @@ th, td {
   </td>
   <td><a href="">code</a>
   </tr>
+  <tr>
+    <td>Plant Recognizer</td>
+    <td><a href="">link</a>
+    </td>
+    <td> <img src="plants.gif" alt="Plants Recognizer"> 
+    </td>
+  </td>
+  <td><a href="">code</a>
+  </tr>
 </table>
