--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ th, td {
     <th>code</th>
   </tr>
   <tr>
-    <td>Handwritten Digits Recognizer</td>
+    <td>Handwritten Digits Recognizer: Classify difits between 1-5</td>
     <td><a href="/app1.html">link</a>
     </td>
     <td> <img src="digitRecognizer.gif" alt="Digit Recognizer"> 
@@ -34,7 +34,7 @@ th, td {
   </td>
   </tr>
   <tr>
-    <td>Chemistry Lab Assistant</td>
+    <td>Chemistry Lab Assistant: Classify images to beaker, beaker tong, beaker burner. </td>
     <td><a href="/app2.html">link</a>
     </td>
     <td> <img src="chmLabAssistant.gif" alt="Chemistry Lab Assistant"> 
@@ -44,7 +44,7 @@ th, td {
   </td>
   </tr>
   <tr>
-    <td>Hand Gestures Recognizer</td>
+    <td>Hand Gestures Recognizer: Classify gestures to peace, thumbs up, and thumbs down</td>
     <td><a href="">link</a>
     </td>
     <td> <img src="handGestures.gif" alt="Hand Gestures Recognizer"> 
@@ -53,7 +53,7 @@ th, td {
   <td><a href="">code</a>
   </tr>
   <tr>
-    <td>Plant Recognizer</td>
+    <td>Plant Recognizer: Classify plants to Aloe vera and Bougainvillea</td>
     <td><a href="">link</a>
     </td>
     <td> <img src="plants.gif" alt="Plants Recognizer"> 
