--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ th, td {
     <th>code</th>
   </tr>
   <tr>
-    <td>Handwritten Digits Recognizer: Classify difits between 1-5</td>
+    <td>Handwritten Digits Recognizer: Classify digits between 1-5</td>
     <td><a href="/app1.html">link</a>
     </td>
     <td> <img src="digitRecognizer.gif" alt="Digit Recognizer"> 
